--- a/night/index_night.html
+++ b/night/index_night.html
@@ -67,7 +67,7 @@
 
         </div>
         <div id="col2" class="col-lg-2">
-            <button type="button" class="btn btn-secondary clrbtn">Clear all</button>
+            <button type="button" class="btn btn-secondary" id="clrbtn">Clear all</button>
         </div>
     </div>
 
