--- a/evening/index_evening.html
+++ b/evening/index_evening.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-lg-5">
                 <label id="PPbtn" for="">Plate Number</label>
-                <input type="number" name="" id="hours-bule-line">
+                <input type="number" name="" id="hours-bule-line" autofocus>
                 <button id="blue" type="button" class="btn btn-info">Add</button>
 
 
