--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="btns" class="container">
         <div class="row">
             <div class="col-lg-5">
-                <label id="PPbtn" for="">Plate Number</label>
+                <label id="PPbtn" for="">Number of plates</label>
                 <input type="number" name="" id="hours-bule-line">
                 <button id="blue" type="button" class="btn btn-info">Add</button>
 
