--- a/night/index_night.html
+++ b/night/index_night.html
@@ -53,8 +53,8 @@
   <div id="btns" class="container">
     <div class="row">
         <div class="col-lg-5">
-            <label id="PPbtn" for="">Plate Number</label>
-            <input type="number" name="" id="hours-bule-line">
+            <label id="PPbtn" for="">Number of plates</label>
+            <input type="number" name="" id="hours-bule-line" autofocus>
             <button id="blue" type="button" class="btn btn-info">Add</button>
 
 
