--- a/night/index_night.html
+++ b/night/index_night.html
@@ -54,7 +54,7 @@
     <div class="row">
         <div class="col-lg-5">
             <label id="PPbtn" for="">Number of plates</label>
-            <input type="number" name="" id="hours-bule-line">
+            <input type="number" name="" id="hours-bule-line" autofocus>
             <button id="blue" type="button" class="btn btn-info">Add</button>
 
 
