added stop button

--- a/night/index_night.html
+++ b/night/index_night.html
@@ -52,23 +52,26 @@
 
   <div id="btns" class="container">
     <div class="row">
-        <div class="col-lg-5">
-            <label id="PPbtn" for="">Number of plates</label>
-            <input type="number" name="" id="hours-bule-line" autofocus>
-            <button id="blue" type="button" class="btn btn-info">Add</button>
+      <div class="col-lg-5">
+        <label id="PPbtn" for="">Number of plates</label>
+        <input type="number" name="" id="hours-bule-line" autofocus>
+        <button id="blue" type="button" class="btn btn-info">Add</button>
 
 
-        </div>
-        <div class="col-lg-5">
-            <label id="QPCRSbtn" for="">QPCR Start</label>
-            <input type="number" name="" id="hours-red-line">
-            <button id="red" type="button" class="btn btn-danger">Add</button>
+      </div>
+      <div class="col-lg-5">
+        <label id="QPCRSbtn" for="">QPCR Start</label>
+        <input type="number" name="" id="hours-red-line">
+        <button id="red" type="button" class="btn btn-danger">Add</button>
 
 
-        </div>
-        <div id="col2" class="col-lg-2">
-            <button type="button" class="btn btn-secondary" id="clrbtn">Clear all</button>
-        </div>
+      </div>
+      <div id="col1" class="col-lg-1">
+        <button type="button" class="btn btn-secondary " id="clrbtn">Clear all</button>
+      </div>
+      <div id="col1" class="col-lg-1">
+        <button type="button" class="btn btn-secondary btn-sm" id="stpbtn">Stop animation</button>
+      </div>
     </div>
 
     <script src="../tamplates.js"></script>
