--- a/night/index_night.html
+++ b/night/index_night.html
@@ -15,19 +15,18 @@
   <div id="nav">
   </div>
   <div id="total" class="container">
-    <div class="row">
-      <div id='col1' class="col-sm-4">
-        <h4 id="total_pippete">Total <br> Plates: <br> </h4>
-      </div>
-      <div class="col-sm-4">
+    <div id='col1' class="col-sm-4">
+      <h3>Total Plates</h3>
+      <h4 id="total_pippete"> </h4>
+  </div>
+  <div class="col-sm-4">
 
+  </div>
+  <div id="col2" class="col-sm-4">
+      <h3>Total QPCR</h3>
+      <h4 id="total_qpcr"> </h4>
 
-      </div>
-      <div id="col2" class="col-sm-4">
-
-        <h4 id="total_qpcr">Total <br> QPCR: </h4>
-
-      </div>
+  </div>
 
     </div>
   </div>
@@ -52,24 +51,30 @@
 
   <div id="btns" class="container">
     <div class="row">
-        <div class="col-lg-5">
-            <label id="PPbtn" for="">Number of plates</label>
-            <input type="number" name="" id="hours-bule-line" autofocus>
-            <button id="blue" type="button" class="btn btn-info">Add</button>
+      <div class="col-lg-5">
+        <label id="PPbtn" for="">Number of plates</label>
+        <input type="number" name="" id="hours-bule-line" autofocus>
+        <button id="blue" type="button" class="btn btn-info">Add</button>
 
 
-        </div>
-        <div class="col-lg-5">
-            <label id="QPCRSbtn" for="">QPCR Start</label>
-            <input type="number" name="" id="hours-red-line">
-            <button id="red" type="button" class="btn btn-danger">Add</button>
+      </div>
+      <div class="col-lg-5">
+        <label id="QPCRSbtn" for="">QPCR Start</label>
+        <input type="number" name="" id="hours-red-line">
+        <button id="red" type="button" class="btn btn-danger">Add</button>
 
 
-        </div>
-        <div id="col2" class="col-lg-2">
-            <button type="button" class="btn btn-secondary" id="clrbtn">Clear all</button>
-        </div>
+      </div>
+      <div id="col1" class="col-lg-1">
+        <button type="button" class="btn btn-secondary " id="clrbtn">Clear all</button>
+      </div>
+      <div id="col1" class="col-lg-1">
+        <button type="button" class="btn btn-secondary btn-sm" id="stpbtn">Stop animation</button>
+      </div>
+      <div id="snackbar"></div>
+
     </div>
+
 
     <script src="../tamplates.js"></script>
     <script type="text/javascript" src="../canvasjs.min.js"></script>
