Added snackbar and circles changes

--- a/evening/index_evening.html
+++ b/evening/index_evening.html
@@ -17,20 +17,16 @@
     <div id="total" class="container">
         <div class="row">
             <div id='col1' class="col-sm-4">
-
-                <h4 id="total_pippete">Total <br> Plates: <br> </h4>
-
+                <h3>Total Plates</h3>
+                <h4 id="total_pippete"> </h4>
             </div>
             <div class="col-sm-4">
 
-
             </div>
             <div id="col2" class="col-sm-4">
-
-                <h4 id="total_qpcr">Total <br> QPCR: </h4>
-
+                <h3>Total QPCR</h3>
+                <h4 id="total_qpcr"> </h4>
             </div>
-
         </div>
     </div>
     </div>
@@ -75,6 +71,8 @@
             <div id="col1" class="col-lg-1">
                 <button type="button" class="btn btn-secondary btn-sm" id="stpbtn">Stop animation</button>
             </div>
+            <div id="snackbar"></div>
+
         </div>
 
 
