--- a/evening/index_evening.html
+++ b/evening/index_evening.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div style="text-align: center;" class="graph" id="chartContainer2"></div>
+    <div style="text-align: center;" class="graph" id="chartContainer"></div>
     <div id="btns" class="container">
         <div class="row">
             <div class="col-lg-10">
