--- a/evening/index_evening.html
+++ b/evening/index_evening.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +25,7 @@
             <div class="form-group pselect">
                 <select class="form-control" id="plateselect" onchange="checkOption()">
                     <option>Add Pippeted Plates</option>
-                    <option>Add QPCR Plates</option>
+                    <option>Add After Robot Plates</option>
                 </select>
                 <input type="number" name="" id="insertinput" max="100" autofocus>
                 <button id="blue" type="button" class="btn"><input type="image" src="../plus.png" /></button>
