--- a/night/index_night.html
+++ b/night/index_night.html
@@ -25,8 +25,8 @@
           <div class="form-group pselect">
               <select class="form-control" id="plateselect" onchange="checkOption()">
                   <option>Add Pippeted Plates</option>
-                  <option>Add QPCR Plates</option>
-              </select>
+                  <option>Add After Robot Plates</option>
+                </select>
               <input type="number" name="" id="insertinput" max="100" autofocus>
               <button id="blue" type="button" class="btn"><input type="image" src="../plus.png" /></button>
           </div>
